Workspace tabs can't be translated #63169

Closed
opened 2019-04-01 08:45:37 +02:00 by Michael Soluyanov · 6 comments

It's looks like workspaces store in startup blend-file so they can't be translated? Or not?

Снимок экрана от 2019-04-01 09-35-17.png

Currently, I found only one translated element:

Снимок экрана от 2019-04-01 09-37-52.png

Even "Duplicate current" is not presented in source list.

It's looks like workspaces store in startup blend-file so they can't be translated? Or not? ![Снимок экрана от 2019-04-01 09-35-17.png](https://archive.blender.org/developer/F6904819/Снимок_экрана_от_2019-04-01_09-35-17.png) Currently, I found only one translated element: ![Снимок экрана от 2019-04-01 09-37-52.png](https://archive.blender.org/developer/F6904814/Снимок_экрана_от_2019-04-01_09-37-52.png) Even "Duplicate current" is not presented in source list.
Author
Member

Added subscriber: @crantisz

Added subscriber: @crantisz
Bastien Montagne was assigned by Michael Soluyanov 2019-04-01 08:46:28 +02:00

Workspaces are data, so their names are not translated in the UI (user can edit them as they want by double-clicking on them). Not sure about the categories…

I will check the Duplicate Current operator case too.

Workspaces are data, so their names are not translated in the UI (user can edit them as they want by double-clicking on them). Not sure about the categories… I will check the Duplicate Current operator case too.

So, categories are actually taken from templates' file names, so would also consider those as data… supporting translations here is not impossible, but would require some work to do it in a sensible way, not sure that is really worth it currently? In any case, that would be a TODO, not a bug…

Fix for operator one (duplicate entry) is incoming.

So, categories are actually taken from templates' file names, so would also consider those as data… supporting translations here is not impossible, but would require some work to do it in a sensible way, not sure that is really worth it currently? In any case, that would be a TODO, not a bug… Fix for operator one (duplicate entry) is incoming.

This issue was referenced by dd4108545a

This issue was referenced by dd4108545ada2bfab607acdd5cda98e77619798f

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author
Member

Poorly, that it turns out one of the most important parts is left without translation...

Poorly, that it turns out one of the most important parts is left without translation...
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#63169
No description provided.