Fix T63169: 'Duplicate Current' entry in new workspace menu is not translated.